--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,12 +16,12 @@ body {
   font-family: Arial, Helvetica, sans-serif; }
 
 h1 {
-  color: #ff7514;
+  color: white;
   font-size: 30px;
   margin-bottom: 15px; }
 
 h2 {
-  color: #ff7514;
+  color: white;
   font-size: 19px; }
 
 label {
